Changed countdown date to ticket sale day. Attempt to fix jumping scroll message on Firefox mobile.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -317,6 +317,7 @@ main {
 
         @-moz-document url-prefix() {
           bottom: -1em;
+          position: fixed;
         }
       }
     }
